--- a/recipes/catfish.html
+++ b/recipes/catfish.html
@@ -7,5 +7,31 @@
 </head>
 <body>
     <h1>Catfish Recipe</h1>
+    <img src="./Recipe-images/Fried-catfish-with-tartar-sauceh.jpg" alt="Fried-catfish-with-tartar-sauce" height="310" width="310"
+    <h1>Description</h1>
+    Fried catfish is a tasty savory dish best served with fries. 
+    <UL>
+        <l1>4 fillets catfish a little over a pound, total</l1>
+        <l1>1½ cups oil vegetable, canola or peanut oil (you may need more or less; depends on how deep your skillet is)</l1>
+        <l1> 2 cups cornmeal yellow</l1>
+        <l1>1 cup buttermilk</l1>
+        <l1>1 tablespoon cayenne pepper (red pepper, ground)</l1>
+        <l1>1 teaspoon salt</l1>
+        <l1>1 teaspoon black pepper</l1>
+    </UL>
+<OL>
+    <li>In a large bowl, add cornmeal, salt, pepper and cayenne; stir with fork till blended
+    2 cups cornmeal, 1 teaspoon salt, 1 teaspoon black pepper, 1 tablespoon cayenne pepper</li>
+    <li> Using a cast-iron, or heavy bottom skillet, pour oil into skillet and heat to medium; 
+    1½ cups oil</li>
+    <li> While oil is heating, take a fillet directly from the buttermilk and place it in the cornmeal; pat the cornmeal on the fillet; coat it all over, twice; repeat with remaining fillets</li>
+    <li>Check your skillet; the oil needs to be around 312 - 350ºF; you can sprinkle a few pieces of cornmeal in the oil to see if it sizzles; if it does sizzle, the oil is ready</li>
+    <li> Cooking in batches of two fillets, place them in the hot oil; DO NOT MOVE THE FILLETS until they've cooked for 2 1/2 - 3 minutes on one side</li>
+    <li>After 2 1/2 -3 minutes, use tongs and flip the fish over and cook for an additional 3 minutes</li>
+    <li>Use a thermometer to measure internal temperature; it should be 145ºF</li>
+    <li>Remove fillets from oil and place on a paper towel</li>
+    <li>Repeat until all fillets are cooked and drained</li>
+    <li>Plate fillets and serve with lemon and tartar sauce</li>
+</OL>
 </body>
 </html>
